--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,7 @@
 :root{
     --darkpurple: #210535;
     --purple: #420D4A;
+    --otherpurple: #3A0A35;
     --lightpurple: #9d849d;
     --white: #ffffff;
 }
@@ -15,7 +16,7 @@ html{
 }
 
 body{
-    background: linear-gradient(60deg, #000000, #210535, #6a1b9a);
+    background: linear-gradient(60deg, #000000, #210535, #3A0A35);
     color: var(--white);
     margin: 0;
 }
@@ -48,7 +49,6 @@ body{
     justify-content: space-between;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     align-items: center;
     padding: 64px 96px;
     flex-wrap: wrap;
@@ -98,6 +98,8 @@ body{
 .hero-image img{
     width: 300px;
     border-radius: 12px;
+    box-shadow: 20px 20px 2px 1px rgba(91, 91, 91, 0.2);
+
 }
 
 /*Main section*/
@@ -187,6 +189,7 @@ main h2{
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive columns */
     gap: 20px;
     margin-bottom: 80px;
+
 }
 
 .services h2{
