--- a/css/home.css
+++ b/css/home.css
@@ -146,6 +146,7 @@ main h2{
     list-style-type: disc; /*Zorgt voor bolletjes*/
     margin-left: 5%;
     padding: 0;
+    width: 100%;
 }
 
 .school li{
