--- a/css/home.css
+++ b/css/home.css
@@ -50,14 +50,14 @@ body{
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
     align-items: center;
-    padding: 64px 96px;
+    padding: 65px 250px;
     flex-wrap: wrap;
     margin-top: 20px;
     margin-bottom: 80px;
 }
 
 .hero-text{
-    width: 500px;
+    width: 400px;
 }
 
 .hero-text h1{
@@ -78,7 +78,7 @@ body{
 
 .hero-btns {
     display: flex;
-    gap: 1rem;
+    gap: 1.2rem;
 }
 
 .hero-btns a:hover{
@@ -119,7 +119,7 @@ main h2{
     flex-direction: column;
     text-align: justify;
     gap: 20px;
-    margin-bottom: 80px;
+    margin-bottom: 180px;
 }
 
 .aboutMe div {
@@ -138,15 +138,14 @@ main h2{
 .aboutMe p{
     line-height: 1.5;
     margin-left: 500px;
-    margin-top: -410px;
+    margin-top: -690px;
     width: 48%;
 }
 
 .school ul{
     list-style-type: disc; /*Zorgt voor bolletjes*/
     margin-left: 5%;
-    padding: 0;
-    width: 100%;
+    padding-left: 20px;
 }
 
 .school li{
@@ -221,7 +220,7 @@ main h2{
 }
 
 .projects h2{
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .project-info{
