--- a/css/home.css
+++ b/css/home.css
@@ -138,7 +138,7 @@ main h2{
 .aboutMe p{
     line-height: 1.5;
     margin-left: 500px;
-    margin-top: -690px;
+    margin-top: -590px;
     width: 48%;
 }
 
@@ -152,6 +152,8 @@ main h2{
     margin-bottom: 8px;
     font-size: 18px;
     color: var(--white);
+    width: 300px;
+    line-height: 1.4;
 }
 
 .skills{
