--- a/css/home.css
+++ b/css/home.css
@@ -98,7 +98,7 @@ body{
 .hero-image img{
     width: 300px;
     border-radius: 12px;
-    box-shadow: 20px 20px 2px 1px rgba(91, 91, 91, 0.2);
+    box-shadow: 20px 20px 2px 1px rgba(138, 138, 138, 0.2);
 
 }
 
@@ -219,6 +219,12 @@ main h2{
 
 .projects{
     margin-bottom: 80px;
+}
+
+.project-titles{
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
 .projects h2{
