--- a/css/home.css
+++ b/css/home.css
@@ -322,3 +322,44 @@ main h2{
     background-color: var(--white);
     color: var(--purple);
 }
+
+/*Contact section*/
+.contact{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive columns */
+    gap: 20px;
+    margin-bottom: 80px;
+}
+
+.contact h2{
+    grid-column: 1 / -1; /* Makes the heading span all columns */
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+ .contact-info {
+    background-color: var(--purple);
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.contact-description{
+    grid-column: 1 / -1;
+    text-align: center;
+    font-size: 18px;
+}
+
+.contact h3 {
+    margin-bottom: 10px;   
+}
+
+/*Footer*/
+footer{
+    background-color: var(--darkpurple);
+    text-align: center;
+    padding: 15px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
