--- a/css/home.css
+++ b/css/home.css
@@ -272,16 +272,14 @@ main h2{
     border-radius: 20px;
 }
 
-
-
-/* Skill widths */
+/* Skill widths and colors */
 .skill.html { width: 90%; background-color: #e34f26;}
 .skill.css { width: 80%; background-color: #1572b6;}
 .skill.js { width: 70%; background-color: #f7df1e;}
 .skill.php{ width: 60%; background-color: #777bb4;}
-.skill.figma { width: 90%; background-color: #f24e1e;}
+.skill.figma { width: 90%; background-color: #D9381E;}
 .skill.blender { width: 75%; background-color: #f5792a;}
-.skill.ill { width: 70%; background-color: #ff9a00;}
+.skill.ill { width: 70%; background-color: #FFCD00;}
 .skill.pho { width: 55%; background-color: #31a8ff;}
 
 /*Services section*/
@@ -290,7 +288,6 @@ main h2{
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive columns */
     gap: 20px;
     margin-bottom: 80px;
-
 }
 
 .services h2{
@@ -444,6 +441,15 @@ main h2{
     padding: 20px;
     border-radius: 8px;
     text-align: center;
+}
+
+.contact-info a{
+    text-decoration: none;
+    color: var(--white);
+}
+
+.contact-info a:hover{
+    text-decoration: underline;
 }
 
 .contact-description{
