Style: changed the h3 a text in contact info and added margin-bottom

--- a/css/home.css
+++ b/css/home.css
@@ -220,6 +220,7 @@ main h2{
     min-width: 300px;
     color: var(--white);
     background-color: transparent;
+    margin-bottom: 20px;
 }
 
 .bio p {
