--- a/css/home.css
+++ b/css/home.css
@@ -499,6 +499,17 @@ main h2{
     line-height: 1.2;
 }
 
+.project-list .infoLinks{
+    color: var(--lightpurple);
+    padding: 0;
+    text-decoration: none;
+}
+
+.infoLinks:hover{
+    color: var(--white);
+    text-decoration: none;
+}
+
 .project-list a:hover{
     border-bottom: 2px solid var(--white);
     padding-bottom: 3.2px;
@@ -516,6 +527,51 @@ main h2{
 .project-btns a:hover{
     background-color: var(--white);
     color: var(--purple);
+}
+
+/*Modals for Ben & Sam*/
+.modal{
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    z-index: 1000;
+}
+
+.modalContent{
+    background-color: #1e1e2f;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid var(--lightpurple);
+    width: 80%;
+    max-width: 500px;
+    border-radius: 8px;
+    color: var(--white);
+}
+
+.modalContent h3{
+    margin-top: 0;
+    color: var(--lightpurple);
+}
+
+.modalContent a{
+    color: var(--lightpurple);
+    text-decoration: underline;
+}
+
+.close{
+    color: var(--white);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover{
+    color: red;
 }
 
 /*Contact section*/
