--- a/css/home.css
+++ b/css/home.css
@@ -467,6 +467,45 @@ main h2{
 
 }
 
+.carousel:hover .carousel-images{
+    animation-play-state: paused;
+}
+
+.lightBox{
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.lightbox-content{
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.lightBox img, .lightBox video{
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.close-lightbox{
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 40px;
+    color: var(--white);
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 1000;
+}
+
 .project-info h2{
     font-size: 22px;
 }
