Add: added dog vector img into a new animation-asset folder

--- a/css/home.css
+++ b/css/home.css
@@ -670,6 +670,8 @@ footer{
     width: 100%;
 }
 
+/*Place code for Daisy animation here*/
+
 /*Mobile layout*/
 @media (max-width: 768px){
     .hero {
