--- a/css/home.css
+++ b/css/home.css
@@ -243,6 +243,57 @@ main h2{
     gap: 40px;
 }
 
+#latestBlog{
+    margin-bottom: 80px;
+    margin: 60px auto;
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 12px;
+    box-shadow: 0 0 15px rgva(0, 0, 0, 0.2);
+}
+
+#latestBlog h2{
+    color: var(--pink);
+    margin-bottom: 20px;
+    font-size: 28px;
+}
+
+.blogPreview{
+    background-color: var(--purple);
+    padding: 25px;
+    border-radius: 10px;
+}
+
+.blogPreview h3{
+    font-size: 22px;
+    color: var(--lightpurple);
+    margin-bottom: 10px;
+}
+
+.blogPreview .date{
+    font-size: 14px;
+    color: lightgrey;
+    margin-bottom: 10px;
+}
+
+.blogPreview p {
+    color: var(--white);
+    line-height: 1.6;
+}
+
+.blogPreview a{
+    display: inline-block;
+    margin-top: 15px;
+    color: var(--pink);
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.2s ease;
+}
+
+.blogPreview a:hover{
+    color: var(--white);
+}
+
 /* Bio */
 .bio {
     flex: 1;
