--- a/css/home.css
+++ b/css/home.css
@@ -284,7 +284,7 @@ main h2{
 .blogPreview a{
     display: inline-block;
     margin-top: 15px;
-    color: var(--pink);
+    color: var(--white);
     text-decoration: none;
     font-weight: bold;
     transition: color 0.2s ease;
@@ -292,6 +292,7 @@ main h2{
 
 .blogPreview a:hover{
     color: var(--white);
+    text-decoration: underline;
 }
 
 /* Bio */
@@ -719,6 +720,31 @@ footer{
     position: relative;
     bottom: 0;
     width: 100%;
+}
+
+/*Daisy footer animation*/
+.daisyWalk{
+    background: transparent url(../animation-assets/DaisyWalk.png);
+    background-repeat: no-repeat;
+    width: 64px;
+    height: 51px;
+    position: absolute;
+    left: 0;
+    bottom: 15px;
+    animation: daisyWalk 0.5s steps(2) infinite, walkAcross 20s linear infinite;
+    filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.7));
+}
+
+@keyframes daisyWalk {
+    from {background-position: 0 0;}
+    to {background-position: -128px 0;}
+}
+
+@keyframes walkAcross {
+    0% {left: -70px; transform: scale(1);}
+    50%{left: 100%; transform: scale(1);}
+    50.01% {left: -70px; transform: scale(-1);}
+    100% {left: -70px; transform: scale(-1);}
 }
 
 /*Mobile layout*/
