Style: added the avatarWave in the second blogpast and positioned the waving image next to the fullPost container in css

--- a/css/blog.css
+++ b/css/blog.css
@@ -116,7 +116,8 @@ body.blogPage .blogLink, .singleBlogPost .blogLink{
     margin: 20px 0;
 }
 
-/*Floating avatar side image*/
+/*Avatar side images*/
+/*Avatar floating*/
 .sideImgContainer{
     position: fixed;
     top: 120px;
@@ -138,6 +139,16 @@ body.blogPage .blogLink, .singleBlogPost .blogLink{
     filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.7));
 }
 
+/*Avatar waving*/
+.waveImgContainer{
+    position: fixed;
+    top: 150px;
+    left: calc(50% - 700px); /*50% = het midden van het scherm, 460 = de afstand tot .fullPost*/
+    width: 220px;
+    z-index: 900;
+    filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.7));
+
+}
 
 /*Footer*/
 footer{
