--- a/css/home.css
+++ b/css/home.css
@@ -101,6 +101,28 @@ h3, p, a{
     transition: 0.3s ease;
 }
 
+/*Language buttons*/
+.language-switcher{
+    display: flex;
+    gap: 10px;
+    margin: 1rem 0;
+}
+
+.language-switcher button{
+    background: var(--pink);
+    border: 2px solid var(--purple);
+    color: var(--white);
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.language-switcher button:hover{
+    background-color: var(--white);
+    color: var(--purple);
+}
+
 /*Header*/
 .hero{
     display: flex;
