--- a/css/home.css
+++ b/css/home.css
@@ -277,7 +277,7 @@ main h2{
 .bio p {
     line-height: 1.6;
     font-size: 18px;
-    text-align: justify;
+    text-align: left;
 }
 
 #latestBlog{
