--- a/css/home.css
+++ b/css/home.css
@@ -85,6 +85,48 @@ h3, p, a{
     font-family: var(--body-font);
 }
 
+/*Pop-up overlay*/
+#popupOverlay{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    z-index: 9999;
+}
+
+#popupContent{
+    position: relative;
+    padding: 30px;
+    border-radius: 12px;
+    max-width: 600px;
+    width: 90%;
+    box-shadow: 0 10 25px rgba(0, 0, 0, 0.3);
+    color: var(--white);
+}
+
+#closePopup{
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--white);
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+#closePopup:hover{
+    color: var(--lightpurple);
+}
+
 /*Navigation bar*/
 .navBar{
     display: flex;
