--- a/css/blog.css
+++ b/css/blog.css
@@ -52,11 +52,16 @@ html{
     padding: 20px;
     margin-bottom: 30px;
     border-radius: 10px;
+    transition: transform 0.3s ease;
+}
+
+.blogPost:hover{
+    transform: translateY(-6px);
 }
 
 .blogPost h3{
     font-size: 25px;
-    color: var(--lightpurple);
+    color: var(--pink);
     margin-bottom: 15px;
 }
 
