--- a/css/home.css
+++ b/css/home.css
@@ -859,6 +859,18 @@ main h2{
     box-shadow: 0 10 25px rgba(0, 0, 0, 0.3);
 }
 
+#emailLink{
+    color: var(--white);
+    text-decoration: none;
+    font-weight: lighter;
+}
+
+#emailLink:hover{
+    text-decoration: underline;
+    color: var(--white);
+}
+
+
 /*Footer*/
 footer{
     background-color: var(--darkpurple);
