--- a/css/home.css
+++ b/css/home.css
@@ -623,7 +623,7 @@ main h2{
 .carousel-images {
     display: flex;
     width: 100%; /* adjust width as needed */
-    animation: slide 15s infinite linear;
+    animation: slide 15s linear infinite;
 }
 
 @keyframes slide {
@@ -639,7 +639,6 @@ main h2{
     height: auto;
     object-fit: cover;
     transition: transform 1s ease;
-
 }
 
 .carousel:hover .carousel-images{
