Fix: changed the color of .blogPreview h3 and translated the titles of the 3rd blogpost

--- a/css/home.css
+++ b/css/home.css
@@ -380,7 +380,7 @@ main h2{
 
 .blogPreview h3{
     font-size: 22px;
-    color: var(--lightpurple);
+    color: var(--pink);
     margin-bottom: 10px;
 }
 
