--- a/css/home.css
+++ b/css/home.css
@@ -612,37 +612,48 @@ main h2{
     margin-bottom: 30px;
 }
 
-.carousel{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    margin-bottom: 20px;
+.carousel{ 
+    position: relative; 
+    width: 100%; 
+    height: 100%; 
+    overflow: hidden; 
+    margin-bottom: 20px; 
+} 
+
+.carousel-images { 
+    display: flex; 
+    width: 100%; /* adjust width as needed */ 
+    animation: slide 15s linear infinite; 
+} 
+
+.carousel-images video { 
+    width: 80%; 
+    max-width: 400px; 
+    padding-right: 20px;
+    height: auto; 
+    object-fit: cover; 
+    border-radius: 10px;
 }
 
-.carousel-images {
-    display: flex;
-    width: 100%; /* adjust width as needed */
-    animation: slide 15s linear infinite;
-}
+@keyframes slide { 
+    from { 
+        transform: translateX(0); 
+    }
+    to { 
+        transform: translateX(-200%); 
+    }
+} 
 
-@keyframes slide {
-    0% { transform: translateX(0); }
-    33% { transform: translateX(-33.3333%); }
-    66% { transform: translateX(-66.6666%); }
-    100% { transform: translateX(0); }
-}
+.carousel-item { 
+    width: 80%; 
+    max-width: 400px; 
+    height: auto; 
+    object-fit: cover; 
+    transition: transform 1s ease; 
+} 
 
-.carousel-item {
-    width: 80%;
-    max-width: 400px;
-    height: auto;
-    object-fit: cover;
-    transition: transform 1s ease;
-}
-
-.carousel:hover .carousel-images{
-    animation-play-state: paused;
+.carousel:hover .carousel-images{ 
+    animation-play-state: paused; 
 }
 
 .lightBox{
