--- a/css/home.css
+++ b/css/home.css
@@ -940,40 +940,47 @@ main h2{
     color: var(--white);
 }
 
-
 /*Footer*/
 footer{
     background-color: var(--darkpurple);
     text-align: center;
-    padding: 30px 0;
+    padding: 15px 0;
     position: relative;
-    bottom: 0;
     width: 100%;
+    overflow: hidden;
 }
 
 /*Daisy footer animation*/
+.daisy-container{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 51px;
+    pointer-events: none;
+    overflow: hidden;
+}
+
 .daisyWalk{
     background: transparent url(../animation-assets/DaisyWalk.png);
     background-repeat: no-repeat;
     width: 64px;
     height: 51px;
     position: absolute;
-    left: 0;
-    bottom: 15px;
+    bottom: 0;
+    left: -70px;
     animation: daisyWalk 0.5s steps(2) infinite, walkAcross 20s linear infinite;
     filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.7));
 }
 
 @keyframes daisyWalk {
-    from {background-position: 0 0;}
-    to {background-position: -128px 0;}
+    from { background-position: 0 0; }
+    to { background-position: -128px 0; }
 }
 
 @keyframes walkAcross {
-    0% {left: -70px; transform: scale(1);}
-    50%{left: 100%; transform: scale(1);}
-    50.01% {left: -70px; transform: scale(-1);}
-    100% {left: -70px; transform: scale(-1);}
+    0% { left: -70px; }
+    100% { left: calc(100% + 70px); }
 }
 
 /*Mobile layout*/
