--- a/css/home.css
+++ b/css/home.css
@@ -406,6 +406,19 @@ main h2{
     text-decoration: underline;
 }
 
+.blogFilters{
+    display: flex;
+    gap: 16px;
+    margin-bottom: 32px;
+}
+
+#blogSearchInput, #categoryFilter{
+    padding: 0.6rem 1rem;
+    border-radius: 8px;
+    border: none;
+    font-size: 16px;
+}
+
 /* Courses + Skills links */
 .courses {
     flex: 1;
