Feat: placed the description for school projects <p> tag inside the span tag and styled it in CSS

--- a/css/home.css
+++ b/css/home.css
@@ -852,13 +852,17 @@ main h2{
 
 .modalContent h3{
     margin-top: 0;
-    color: var(--lightpurple);
+    color: var(--pink);
 }
 
-.modalContent a{
+.modalContent strong{
     color: var(--lightpurple);
-    text-decoration: underline;
 }
+.modalContent a{
+    color: var(--white);
+}
+
+
 
 .close{
     color: var(--white);
